<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="ExtraTranslation">
    <string name="app_name">Uglikis</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_to_string">Welcome To</string>
    <string name="uglikis_string">UGLIKIS</string>
    <string name="button_ek1_string">Get Started</string>
    <string name="tum_string">TUM</string>
    <string name="mds_string">MDS</string>
    <string name="arcisstra_e_21__80333_string">Karolinenplatz 4, 80333</string>
    <string name="mobility_data_space_center_string">Mobility Data Space Center</string>
    <string name="approx__7_min_walk_string">approx. 7 min walk</string>
    <string name="large_title_string">Bike trip</string>
    <string name="next_milestone___48g_co2_string">Next Milestone           48g CO2</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="sign_in_string">Sign In</string>
    <string name="already_have_an_account__string">Already have an account?</string>
    <string name="password_string">Password</string>
    <string name="username_string">Username</string>
    <string name="button_ek3_string">Sign up with Google</string>
    <string name="button_ek5_string">Sign up with Email</string>
    <string name="button_login_text">Log In</string>
    <string name="or_string">or</string>
    <string name="sign_up_string">Sign Up</string>
    <string name="title_activity_login_android_template">LoginActivityAndroidTemplate</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Play_game_button_descstring">Play the game</string>
    <string name="ug_leaderboard_string">Leaderboard</string>
    <string name="sample_tag">\@sample_tag</string>
    <string name="sample_name">Sample Name</string>
    <string name="sample_points">1337</string>
        <string name="fui_default_toolbar_title" translatable="false">@string/app_name</string>
        <string name="fui_progress_dialog_loading" translation_description="Loading text in dialog">Loading…</string>
        <string name="fui_sign_in_default" translation_description="Button text to sign in">Sign in</string>
        <string name="fui_continue" translation_description="Button text to continue">Continue</string>
        <string name="fui_tos_and_pp" translation_description="Global ToS and privacy policy message">By continuing, you are indicating that you accept our <xliff:g example="https://google.com/terms" id="tos" translation_description="Terms of service text">%1$s</xliff:g> and <xliff:g example="https://google.com/privacy" id="pp" translation_description="Privacy policy text">%2$s</xliff:g>.</string>
        <string name="fui_tos_and_pp_footer" translation_description="Global ToS and Privacy policy footer"><xliff:g example="https://google.com/terms" id="tos" translation_description="Footer ToS text">%1$s</xliff:g> \u00A0 \u00A0 <xliff:g example="https://google.com/privacy" id="pp" translation_description="Footer privacy policy text">%2$s</xliff:g></string>
        <string name="fui_no_internet" translation_descripition="User message shown when sign-in is attempted while offline.">Network error, check your internet connection.</string>
        <string name="fui_idp_name_google">Google</string>
        <string name="fui_idp_name_facebook">Facebook</string>
        <string name="fui_idp_name_twitter">Twitter</string>
        <string name="fui_idp_name_github">GitHub</string>
        <string name="fui_idp_name_phone">Phone</string>
        <string name="fui_idp_name_email">Email</string>
        <string name="fui_sign_in_with_google" translation_description="Sign in button text">Sign in with Google</string>
        <string name="fui_sign_in_with_facebook" translation_description="Sign in button text">Sign in with Facebook</string>
        <string name="fui_sign_in_with_twitter" translation_description="Sign in button text">Sign in with Twitter</string>
        <string name="fui_sign_in_with_github" translation_description="Sign in button text">Sign in with GitHub</string>
        <string name="fui_sign_in_with_email" translation_description="Sign in button text">Sign in with email</string>
        <string name="fui_sign_in_with_phone" translation_description="Sign in button text">Sign in with phone</string>
        <string name="fui_sign_in_anonymously" translation_description="Continue as guest">Continue as guest</string>
        <string name="fui_sign_in_with_apple" translation_description="Sign in button text. [CHAR_LIMIT=40]">Sign in with Apple</string>
        <string name="fui_sign_in_with_microsoft" translation_description="Sign in button text. [CHAR_LIMIT=40]">Sign in with Microsoft</string>
        <string name="fui_sign_in_with_yahoo" translation_description="Sign in button text. [CHAR_LIMIT=40]">Sign in with Yahoo</string>
        <string name="fui_next_default" translation_description="Button text to continue">Next</string>
        <string name="fui_email_hint" translation_description="Hint in email input field">Email</string>
        <string name="fui_phone_hint" translation_description="Hint for phone input field">Phone Number</string>
        <string name="fui_country_hint" translation_description="Hint for phone input field">Country</string>
        <string name="fui_password_hint" translation_description="Hint for password input field for existing passwords">Password</string>
        <string name="fui_new_password_hint" translation_description="Hint for password input field for new passwords">New password</string>
        <string name="fui_required_field" translation_description="Inline error for required field">You can\'t leave this empty.</string>
        <string name="fui_invalid_email_address" translation_description="Inline error for invalid email address">That email address isn\'t correct</string>
        <string name="fui_missing_email_address" translation_description="Inline error for empty email address in input field">Enter your email address to continue</string>
        <string name="fui_missing_first_and_last_name" translation_description="Inline error for empty email address in input field. [CHAR_LIMIT=60]">Please enter a first and last name.</string>
        <string name="fui_progress_dialog_checking_accounts" translation_description="Progress dialog text while checking for existing accounts">Checking for existing accounts…</string>
        <string name="fui_title_register_email" translation_description="Title for signup form">Sign up</string>
        <string name="fui_name_hint" translation_description="Hint for last name input field">First &amp; last name</string>
        <string name="fui_button_text_save" translation_description="Button text to save input form">Save</string>
        <string name="fui_progress_dialog_signing_up" translation_description="Dialog text while waiting for server's signup response">Signing up…</string>
        <plurals name="fui_error_weak_password" translation_description="Inline error for weak password">
            <item quantity="one" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d character and a mix of letters and numbers</item>
            <item quantity="other" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d characters and a mix of letters and numbers</item>
        </plurals>
        <string name="fui_email_account_creation_error" translation_description="Inline error for signup failure">Email account registration unsuccessful</string>
        <string name="fui_terms_of_service" translation_description="Link text to web url containing the app's terms of service">Terms of Service</string>
        <string name="fui_privacy_policy" translation_description="Link text to web url containing the app's privacy policy">Privacy Policy</string>
        <string name="fui_email_field_name" translatable="false">email_field</string>
        <string name="fui_title_welcome_back_idp_prompt" translatable="false">@string/fui_sign_in_default</string>
        <string name="fui_title_welcome_back_password_prompt" translatable="false">@string/fui_sign_in_default</string>
        <string name="fui_welcome_back_idp_header" translation_description="Inline subtitle to users whose signup was interrupted since an existing account was detected">You already have an account</string>
        <string name="fui_welcome_back_email_header" translation_description="Message for returning users">Welcome back!</string>
        <string name="fui_welcome_back_email_link_header" translation_description="Message for returning users">You already have an account\n</string>
        <string name="fui_welcome_back_idp_prompt" translation_description="Message to users that need to signin using existing IDP accounts">
        You\'ve already used <xliff:g example="jane.doe@example.com" id="email_addr" translation_description="">%1$s</xliff:g>.
        Sign in with <xliff:g example="Google" id="provider_name" translation_description="">%2$s</xliff:g> to continue.
    </string>
        <string name="fui_welcome_back_password_prompt_body" translation_description="Message to users that need to signin using existing email accounts">
        You\'ve already used <xliff:g example="jane.doe@example.com" id="email_addr" translation_description="">%1$s</xliff:g>
        to sign in. Enter your password for that account.
    </string>
        <string name="fui_welcome_back_email_link_prompt_body" translation_description="Message to users that need to signin using existing email link accounts">
        You\'ve already used <xliff:g example="jane.doe@example.com" id="email_addr" translation_description="">%1$s</xliff:g>.
        You can connect your %2$s account with %1$s by signing in with email link below.\n\nFor this flow to successfully connect your %2$s account with this email, you have to open the link on the same device or browser.
    </string>
        <string name="fui_progress_dialog_signing_in" translation_description="Progress dialog text">Signing in…</string>
        <string name="fui_trouble_signing_in" translation_description="Link leading to forgot password flow">Trouble signing in?</string>
        <string name="fui_title_recover_password_activity" translation_description="Recover password screen title">Recover password</string>
        <string name="fui_title_confirm_recover_password" translation_description="Password recovery confirmation message">Check your email</string>
        <string name="fui_password_recovery_body" translation_description="Password recovery message body">Get instructions sent to this email that explain how to
        reset your password.</string>
        <string name="fui_button_text_send" translation_description="Button text to send recovery email">Send</string>
        <string name="fui_confirm_recovery_body" translation_description="Alert dialog displayed after password recovery email is sent">Follow the instructions sent to %1$s to recover your password.</string>
        <string name="fui_progress_dialog_sending" translation_description="Progress dialog while password recovery email or email link is being sent">Sending…</string>
</resources>