<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/horizontalScrollView4"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		sign_in_screen
     *	@date 		1656266114860
     *	@title 		Main Game
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->


	<View
		android:id="@+id/_bg__sign_in_screen"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/_bg__sign_in_screen_shape"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0" />


	<View
		android:id="@+id/line_13"
		android:layout_width="0dp"
		android:layout_height="3dp"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:background="@drawable/line_13_shape"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constraintLayout"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@+id/line_13"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0">

		<EditText
			android:id="@+id/username2"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:autofillHints="@string/prompt_email"
			android:hint="@string/prompt_email"
			android:inputType="textEmailAddress"
			android:minHeight="48dp"
			android:selectAllOnFocus="true"
			android:textColor="@color/black"
			android:textColorHint="#757575"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.496"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/sign_in"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="Poppins"
			android:gravity="center"
			android:text="@string/sign_in_string"
			android:textColor="@color/sign_in_color"
			android:textSize="36sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.501"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.258" />

		<TextView
			android:id="@+id/already_have_an_account_"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="Poppins"
			android:gravity="center"
			android:text="@string/already_have_an_account__string"
			android:textColor="@color/sign_in_color"
			android:textSize="15sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.107" />

		<Button
			android:id="@+id/button_ek1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="24dp"
			android:layout_marginEnd="24dp"
			android:background="@drawable/round_shape_button"
			android:fontFamily="Poppins"
			android:text="@string/button_login_text"
			android:textColor="@color/_bg__sign_in_screen_color"
			android:textSize="16sp"
			android:textStyle="bold"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.907" />

		<EditText
			android:id="@+id/editTextTextPassword"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:autofillHints=""
			android:ems="10"
			android:hint="@string/password_string"
			android:inputType="textPassword"
			android:minHeight="48dp"
			android:textColor="@color/black"
			android:textColorHint="#757575"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.496"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.695" />
	</androidx.constraintlayout.widget.ConstraintLayout>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constraintLayout2"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/line_13">

		<TextView
			android:id="@+id/or"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="Poppins"
			android:gravity="center"
			android:text="@string/or_string"
			android:textColor="@color/sign_in_color"
			android:textSize="15sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.114" />

		<com.google.android.gms.common.SignInButton
			android:id="@+id/sign_in_button"
			android:layout_width="0dp"
			android:layout_height="56dp"
			android:layout_marginStart="24dp"
			android:layout_marginEnd="24dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.87" />

		<TextView
			android:id="@+id/sign_up"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:fontFamily="Poppins"
			android:gravity="center"
			android:text="@string/sign_up_string"
			android:textColor="@color/sign_in_color"
			android:textSize="36sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.303" />

		<Button
			android:id="@+id/button_ek5"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="24dp"
			android:layout_marginEnd="24dp"
			android:background="@drawable/round_shape_button"
			android:fontFamily="Poppins"
			android:text="@string/button_ek5_string"
			android:textAlignment="center"
			android:textColor="@color/_bg__sign_in_screen_color"
			android:textSize="16sp"
			android:textStyle="bold"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.62" />
	</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>