<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/horizontalScrollView2"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		specific_activity
     *	@date 		1656251800198
     *	@title 		Main Game
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->


	<View
		android:id="@+id/__bg__specific_activity"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="@drawable/__bg__specific_activity_shape"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_conversion_absoluteHeight="812dp"
		tools:layout_conversion_absoluteWidth="375dp" />


	<ImageView
		android:id="@+id/image_10"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:contentDescription="image_10"
		android:src="@drawable/image_10"
		app:layout_constraintBottom_toBottomOf="@+id/__bg__specific_activity"
		app:layout_constraintEnd_toEndOf="@+id/__bg__specific_activity"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="@+id/__bg__specific_activity"
		app:layout_constraintTop_toTopOf="@+id/__bg__specific_activity"
		app:layout_constraintVertical_bias="1.0"
		tools:layout_conversion_absoluteHeight="801dp"
		tools:layout_conversion_absoluteWidth="568dp" />

	<ImageView
		android:id="@+id/image_13"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="image_13"
		android:src="@drawable/image_13"
		app:layout_constraintBottom_toTopOf="@+id/bg_destination_specific_map"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.62"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/rectangle_ek1"
		app:layout_constraintVertical_bias="0.675"
		tools:layout_conversion_absoluteHeight="30dp"
		tools:layout_conversion_absoluteWidth="32dp" />

	<TextView
		android:id="@+id/tum"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:fontFamily="Inter"
		android:text="@string/tum_string"
		android:textColor="@color/tum_color"
		android:textSize="12sp"
		app:layout_constraintBottom_toTopOf="@+id/vector_1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/rectangle_ek1"
		tools:layout_conversion_absoluteHeight="23dp"
		tools:layout_conversion_absoluteWidth="45dp" />


	<TextView
		android:id="@+id/mds"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="Inter"
		android:gravity="center"
		android:text="@string/mds_string"
		android:textColor="@color/tum_color"
		android:textSize="12sp"
		app:layout_constraintBottom_toTopOf="@+id/bg_destination_specific_map"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.691"
		app:layout_constraintStart_toStartOf="@+id/__bg__specific_activity"
		app:layout_constraintTop_toBottomOf="@+id/image_13"
		app:layout_constraintVertical_bias="0.0"
		tools:layout_conversion_absoluteHeight="23dp"
		tools:layout_conversion_absoluteWidth="40dp" />

	<ImageView
		android:id="@+id/rectangle_ek1"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:contentDescription="rectangle_ek1"
		android:src="@drawable/rectangle_ek1"
		app:layout_constraintBottom_toBottomOf="@+id/__bg__specific_activity"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		tools:layout_conversion_absoluteHeight="139dp"
		tools:layout_conversion_absoluteWidth="375dp" />


	<TextView
		android:id="@+id/large_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="Poppins"
		android:text="@string/large_title_string"
		android:textColor="@color/tum_color"
		android:textSize="20sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="@+id/rectangle_ek1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.50"
		app:layout_constraintStart_toStartOf="@+id/rectangle_ek1"
		app:layout_constraintTop_toTopOf="@+id/__bg__specific_activity"
		app:layout_constraintVertical_bias="0.369"
		tools:layout_conversion_absoluteHeight="47dp"
		tools:layout_conversion_absoluteWidth="111dp" />

	<ImageView
		android:id="@+id/vector_1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="vector_1"
		android:src="@drawable/vector_1"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/__bg__specific_activity"
		app:layout_constraintHorizontal_bias="0.335"
		app:layout_constraintStart_toStartOf="@+id/__bg__specific_activity"
		app:layout_constraintTop_toTopOf="@+id/rectangle_ek1"
		app:layout_constraintVertical_bias="0.437"
		tools:layout_conversion_absoluteHeight="277dp"
		tools:layout_conversion_absoluteWidth="139dp" />

	<TextView
		android:id="@+id/next_milestone___48g_co2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="Inter"
		android:text="@string/next_milestone___48g_co2_string"
		android:textColor="@color/tum_color"
		android:textSize="12sp"
		app:layout_constraintBottom_toBottomOf="@+id/rectangle_ek1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/large_title"
		app:layout_constraintVertical_bias="0.2"
		tools:layout_conversion_absoluteHeight="47dp"
		tools:layout_conversion_absoluteWidth="109dp" />

	<ImageView
		android:id="@+id/bg_destination_specific_map"
		android:layout_width="364dp"
		android:layout_height="90dp"
		app:layout_constraintBottom_toBottomOf="@+id/__bg__specific_activity"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.489"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/__bg__specific_activity"
		app:layout_constraintVertical_bias="0.975"
		app:srcCompat="@drawable/__bg__specific_activity_shape"
		android:contentDescription="TODO" />

	<ImageView
		android:id="@+id/image_15"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="image_15"
		android:src="@drawable/image_15"
		app:layout_constraintBottom_toBottomOf="@+id/bg_destination_specific_map"
		app:layout_constraintEnd_toEndOf="@+id/bg_destination_specific_map"
		app:layout_constraintHorizontal_bias="0.028"
		app:layout_constraintStart_toStartOf="@+id/bg_destination_specific_map"
		app:layout_constraintTop_toTopOf="@+id/bg_destination_specific_map"
		tools:ignore="ImageContrastCheck"
		tools:layout_conversion_absoluteHeight="64dp"
		tools:layout_conversion_absoluteWidth="82dp" />

	<TextView
		android:id="@+id/mobility_data_space_center"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="Inter"
		android:text="@string/mobility_data_space_center_string"
		android:textColor="@color/tum_color"
		android:textSize="12sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="@+id/bg_destination_specific_map"
		app:layout_constraintEnd_toEndOf="@+id/bg_destination_specific_map"
		app:layout_constraintHorizontal_bias="0.027"
		app:layout_constraintStart_toEndOf="@+id/image_15"
		app:layout_constraintTop_toTopOf="@+id/bg_destination_specific_map"
		app:layout_constraintVertical_bias="0.211"
		tools:layout_conversion_absoluteHeight="26dp"
		tools:layout_conversion_absoluteWidth="178dp" />

	<TextView
		android:id="@+id/approx__7_min_walk"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:alpha="0.54"
		android:fontFamily="Inter"
		android:text="@string/approx__7_min_walk_string"
		android:textColor="@color/tum_color"
		android:textSize="12sp"
		app:layout_constraintBottom_toBottomOf="@+id/bg_destination_specific_map"
		app:layout_constraintEnd_toEndOf="@+id/bg_destination_specific_map"
		app:layout_constraintHorizontal_bias="0.027"
		app:layout_constraintStart_toEndOf="@+id/image_15"
		app:layout_constraintTop_toTopOf="@+id/bg_destination_specific_map"
		app:layout_constraintVertical_bias="0.76"
		tools:layout_conversion_absoluteHeight="23dp"
		tools:layout_conversion_absoluteWidth="123dp" />

	<TextView
		android:id="@+id/arcisstra_e_21__80333"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="Inter"
		android:text="@string/arcisstra_e_21__80333_string"
		android:textColor="@color/tum_color"
		android:textSize="12sp"
		app:layout_constraintBottom_toTopOf="@+id/approx__7_min_walk"
		app:layout_constraintEnd_toEndOf="@+id/bg_destination_specific_map"
		app:layout_constraintHorizontal_bias="0.027"
		app:layout_constraintStart_toEndOf="@+id/image_15"
		app:layout_constraintTop_toBottomOf="@+id/mobility_data_space_center"
		app:layout_constraintVertical_bias="0.0"
		tools:layout_conversion_absoluteHeight="23dp"
		tools:layout_conversion_absoluteWidth="153dp" />

	<ImageView
		android:id="@+id/back_arrow_specific"
		android:layout_width="45dp"
		android:layout_height="45dp"
		app:layout_constraintBottom_toBottomOf="@+id/rectangle_ek1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.045"
		app:layout_constraintStart_toStartOf="@+id/rectangle_ek1"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.486"
		app:srcCompat="@drawable/ic_baseline_arrow_back_24"
		android:contentDescription="TODO" />


</androidx.constraintlayout.widget.ConstraintLayout>